# Diplom

./: CMakeLists.txt  README.md
examples/real_projects_v1_1/cJSON/: dependencies.dot  report.json  report.md
examples/real_projects_v1_1/fmt/: dependencies.dot  report.json  report.md
examples/real_projects_v1_1/spdlog/: dependencies.dot  report.json  report.md
examples/real_projects_v1_1/tinyxml2/: dependencies.dot  report.json  report.md
examples/real_projects_v1_1/tinyxml2_noinfo/: report.json  report.md
examples/real_projects_v1_1/yaml-cpp/: dependencies.dot  report.json  report.md
examples/real_projects_v1_1/zlib/: dependencies.dot  report.json  report.md
examples/real_projects_v1_1/zlib_json/: report.json
examples/reports/test_find_package_like/: dependencies.dot  report.json  report.md
examples/reports/test_multi_target/: dependencies.dot  report.json  report.md
examples/reports/test_problematic_paths/: dependencies.dot  report.json  report.md
examples/reports/test_simple_internal/: dependencies.dot  report.json  report.md
examples/stress_projects/directshow_camera/: dependencies.dot  notes.md  report.json  report.md
examples/stress_projects/libfreenect/: dependencies.dot  notes.md  report.json  report.md
examples/stress_projects/libuvc/: dependencies.dot  notes.md  report.json  report.md
include/anaport/: analyzer.hpp  cmake_cache_parser.hpp  cmake_invoker.hpp  compile_commands_parser.hpp  file_api_parser.hpp  logger.hpp  model.hpp  options.hpp  report_generator.hpp  workspace.hpp
src/: analyzer.cpp  cmake_cache_parser.cpp  cmake_invoker.cpp  compile_commands_parser.cpp  file_api_parser.cpp  logger.cpp  main.cpp  options.cpp  report_generator.cpp  workspace.cpp
tests/fixtures/test_find_package_like/: CMakeLists.txt
tests/fixtures/test_find_package_like/src/: main.cpp  netlib.cpp
tests/fixtures/test_multi_target/: CMakeLists.txt
tests/fixtures/test_multi_target/app/: CMakeLists.txt
tests/fixtures/test_multi_target/app/src/: main.cpp
tests/fixtures/test_multi_target/lib_a/: CMakeLists.txt
tests/fixtures/test_multi_target/lib_a/include/: lib_a.hpp
tests/fixtures/test_multi_target/lib_a/src/: lib_a.cpp
tests/fixtures/test_multi_target/lib_b/: CMakeLists.txt
tests/fixtures/test_multi_target/lib_b/include/: lib_b.hpp
tests/fixtures/test_multi_target/lib_b/src/: lib_b.cpp
tests/fixtures/test_problematic_paths/: CMakeLists.txt
tests/fixtures/test_problematic_paths/src/: main.cpp
tests/fixtures/test_simple_internal/: CMakeLists.txt
tests/fixtures/test_simple_internal/include/: mathlib.hpp  strutils.hpp
tests/fixtures/test_simple_internal/src/: main.cpp  mathlib.cpp  strutils.cpp
